lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-2.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { x = { [1] = 1, 2, 3, a=1,b=3, [3]=1 }; }\", |p| p.lua_block())"
---
LUA_BLOCK_EXPR: 0..46 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  LUA_STMT_EXPR: 6..45 
    LUA_MULTI_EXPR: 6..8 
      LUA_LIT_EXPR: 6..8 
        IDENT: 6..7 "x"
        WHITESPACE: 7..8 
    EQ: 8..9 "="
    WHITESPACE: 9..10 
    LUA_MULTI_EXPR: 10..43 
      LUA_TABLE_EXPR: 10..43 
        L_BRACE: 10..11 "{"
        WHITESPACE: 11..12 
        L_BRACKET: 12..13 "["
        LUA_LIT_EXPR: 13..14 
          INT: 13..14 "1"
        R_BRACKET: 14..15 "]"
        WHITESPACE: 15..16 
        EQ: 16..17 "="
        WHITESPACE: 17..18 
        LUA_LIT_EXPR: 18..19 
          INT: 18..19 "1"
        COMMA: 19..20 ","
        WHITESPACE: 20..21 
        LUA_LIT_EXPR: 21..22 
          INT: 21..22 "2"
        COMMA: 22..23 ","
        WHITESPACE: 23..24 
        LUA_LIT_EXPR: 24..25 
          INT: 24..25 "3"
        COMMA: 25..26 ","
        WHITESPACE: 26..27 
        LUA_NAME: 27..28 
          IDENT: 27..28 "a"
        EQ: 28..29 "="
        LUA_LIT_EXPR: 29..30 
          INT: 29..30 "1"
        COMMA: 30..31 ","
        LUA_NAME: 31..32 
          IDENT: 31..32 "b"
        EQ: 32..33 "="
        LUA_LIT_EXPR: 33..34 
          INT: 33..34 "3"
        COMMA: 34..35 ","
        WHITESPACE: 35..36 
        L_BRACKET: 36..37 "["
        LUA_LIT_EXPR: 37..38 
          INT: 37..38 "3"
        R_BRACKET: 38..39 "]"
        EQ: 39..40 "="
        LUA_LIT_EXPR: 40..42 
          INT: 40..41 "1"
          WHITESPACE: 41..42 
        R_BRACE: 42..43 "}"
    SEMI: 43..44 ";"
    WHITESPACE: 44..45 
  R_BRACE: 45..46 "}"
