lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-20.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua {\n                for i=1,2,3 do end\n            }\", |p|\n{ p.lua_block(); })"
---
LUA_BLOCK_EXPR: 0..54 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..22 
  LUA_FOR_STMT: 22..53 
    FOR_KW: 22..25 "for"
    WHITESPACE: 25..26 
    LUA_NAME: 26..27 
      IDENT: 26..27 "i"
    EQ: 27..28 "="
    LUA_LIT_EXPR: 28..29 
      INT: 28..29 "1"
    COMMA: 29..30 ","
    LUA_LIT_EXPR: 30..31 
      INT: 30..31 "2"
    COMMA: 31..32 ","
    LUA_LIT_EXPR: 32..34 
      INT: 32..33 "3"
      WHITESPACE: 33..34 
    IDENT: 34..36 "do"
    WHITESPACE: 36..37 
    IDENT: 37..40 "end"
    WHITESPACE: 40..53 
  R_BRACE: 53..54 "}"
