lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-24.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua {\n                for i = 1,10 do end\n            }\", |p|\n{ p.lua_block(); })"
---
LUA_CHUNK_EXPR: 0..55 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..22 
  LUA_FOR_STMT: 22..41 
    LUA_NUMERIC_FOR: 22..41 
      FOR_KW: 22..25 "for"
      WHITESPACE: 25..26 
      LUA_NAME: 26..27 
        IDENT: 26..27 "i"
      WHITESPACE: 27..28 
      EQ: 28..29 "="
      WHITESPACE: 29..30 
      LUA_LIT_EXPR: 30..31 
        INT: 30..31 "1"
      COMMA: 31..32 ","
      LUA_LIT_EXPR: 32..34 
        INT: 32..34 "10"
      WHITESPACE: 34..35 
      IDENT: 35..37 "do"
      WHITESPACE: 37..38 
      IDENT: 38..41 "end"
  WHITESPACE: 41..54 
  R_BRACE: 54..55 "}"
