lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-25.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua {\n                for a,b,c,d in {} do end\n            }\", |p|\n{ p.lua_block(); })"
---
LUA_CHUNK_EXPR: 0..60 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..22 
  LUA_FOR_STMT: 22..46 
    LUA_GENERIC_FOR: 22..46 
      FOR_KW: 22..25 "for"
      WHITESPACE: 25..26 
      LUA_NAME: 26..27 
        IDENT: 26..27 "a"
      COMMA: 27..28 ","
      LUA_NAME: 28..29 
        IDENT: 28..29 "b"
      COMMA: 29..30 ","
      LUA_NAME: 30..31 
        IDENT: 30..31 "c"
      COMMA: 31..32 ","
      LUA_NAME: 32..33 
        IDENT: 32..33 "d"
      WHITESPACE: 33..34 
      IN_KW: 34..36 "in"
      WHITESPACE: 36..37 
      LUA_TABLE_EXPR: 37..39 
        L_BRACE: 37..38 "{"
        R_BRACE: 38..39 "}"
      WHITESPACE: 39..40 
      IDENT: 40..42 "do"
      WHITESPACE: 42..43 
      IDENT: 43..46 "end"
  WHITESPACE: 46..59 
  R_BRACE: 59..60 "}"
