lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__lua-28.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"lua { local x = 1 ^ 2 ^ 3; }\", |p| p.lua_block())"
---
LUA_CHUNK_EXPR: 0..28 
  LUA_KW: 0..3 "lua"
  WHITESPACE: 3..4 
  L_BRACE: 4..5 "{"
  WHITESPACE: 5..6 
  LUA_LOCAL_STMT: 6..26 
    IDENT: 6..11 "local"
    WHITESPACE: 11..12 
    LUA_NAME: 12..13 
      IDENT: 12..13 "x"
    WHITESPACE: 13..14 
    EQ: 14..15 "="
    WHITESPACE: 15..16 
    LUA_MULTI_EXPR: 16..25 
      LUA_BINARY_EXPR: 16..25 
        LUA_LIT_EXPR: 16..17 
          INT: 16..17 "1"
        WHITESPACE: 17..18 
        CARET: 18..19 "^"
        WHITESPACE: 19..20 
        LUA_BINARY_EXPR: 20..25 
          LUA_LIT_EXPR: 20..21 
            INT: 20..21 "2"
          WHITESPACE: 21..22 
          CARET: 22..23 "^"
          WHITESPACE: 23..24 
          LUA_LIT_EXPR: 24..25 
            INT: 24..25 "3"
    SEMI: 25..26 ";"
  WHITESPACE: 26..27 
  R_BRACE: 27..28 "}"
